# cira-core-sdk-template

./: README.md
model/Template/: TemplateModel.cpp  TemplateModel.hpp
model/Template/ui/: FormTemplate.cpp  FormTemplate.h  FormTemplate.ui  FormTemplate_support.cpp  ThreadTemplate.cpp  ThreadTemplate.hpp
model/Template/ui/popup/: DialogTemplate.cpp  DialogTemplate.h  DialogTemplate.ui
plugin/cira_bernoulli_opencv/: CMakeLists.txt  package.xml  test_main.cpp
plugin/cira_bernoulli_opencv/include/cira_bernoulli_opencv/: cira_bernoulli_opencv.hpp
plugin/cira_bernoulli_opencv/resources/: cira_bernoulli_opencv_icon.qrc  cira_bernoulli_opencv_images.qrc  cira_bernoulli_opencv_model.qrc
plugin/cira_bernoulli_opencv/src/: cira_bernoulli_opencv.cpp
